comments and users are linked, photos ordered by created_at

--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -37,3 +37,7 @@ div#navigation form input {
 div#content .failure {
 	color: #ff0000;
 }
+
+div#content table tbody tr.legend td {
+	font-weight: bold;
+}
